--- a/src/app/core/components/user-roles/user-roles.component.html
+++ b/src/app/core/components/user-roles/user-roles.component.html
@@ -1,3 +1,10 @@
+<h3
+  class="font-bold pl-4 color-gray text-2xl subpixel-antialiased text-gray-800 uppercase"
+>
+  Roles
+</h3>
+
+<app-breadcrumb />
 @let roles = roles$ | async;
 <p-table
   [scrollable]="true"
