--- a/src/app/core/components/user-management/user-management.component.html
+++ b/src/app/core/components/user-management/user-management.component.html
@@ -1,3 +1,12 @@
+<h3
+  class="font-bold pl-4 color-gray text-2xl subpixel-antialiased text-gray-800 uppercase"
+>
+  Users
+</h3>
+
+<app-breadcrumb></app-breadcrumb>
+
+<!-- <p-breadcrumb class="max-w-full" [model]="" /> -->
 @let users = users$ | async;
 <p-table
   [scrollable]="true"
