--- a/src/app/core/components/region-management/region-management.component.html
+++ b/src/app/core/components/region-management/region-management.component.html
@@ -1,18 +1,19 @@
 <h3
   class="font-bold pl-4 color-gray text-2xl subpixel-antialiased text-gray-800 uppercase"
 >
-  Users
+  Countries
 </h3>
 
 <app-breadcrumb></app-breadcrumb>
 
 <!-- <p-breadcrumb class="max-w-full" [model]="" /> -->
-@let users = users$ | async;
+<!-- @let users = users$ | async; -->
+ @let countries=countries$ | async;
 <p-table
   [scrollable]="true"
   scrollHeight="flex"
   #dt
-  [value]="users || []"
+  [value]="countries || []"
   dataKey="id"
   currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
   [showCurrentPageReport]="true"
@@ -27,23 +28,23 @@
   [globalFilterFields]="['name']"
   stateStorage="session"
   stateKey="statedemo-session"
-  [loading]="isLoading()"
->
+  >
+  <!-- [loading]="isLoading()" -->
   <ng-template #caption>
     <div class="flex flex-wrap gap-2">
       <p-button
         label="Clear"
         [outlined]="true"
         icon="pi pi-filter-slash"
-        (click)="clear(dt)"
-      />
+        />
+        <!-- (click)="clear(dt)" -->
       <p-button
         p-button
         icon="pi pi-plus"
         label="Add User"
         styleClass="ml-2"
-        (click)="formState.set('addUser'); displayDialog.set(true)"
-      />
+        />
+        <!-- (click)="formState.set('addUser'); displayDialog.set(true)" -->
       <p-iconfield iconPosition="left" class="ml-auto">
         <p-inputicon>
           <i class="pi pi-search"></i>
@@ -60,12 +61,9 @@
   </ng-template>
   <ng-template pTemplate="header" let-columns>
     <tr>
-      <th>Id</th>
-      <th>Employee Name</th>
-      <th>Username</th>
-      <th>Role</th>
-      <th>Status</th>
+      <th *ngFor="let country of tableHeadings$|async">{{country|titlecase}}</th>
       <th>Actions</th>
+     
     </tr>
   </ng-template>
   <ng-template
@@ -75,8 +73,8 @@
     let-rowIndex="rowIndex"
   >
     <tr [pSelectableRow]="rowData">
-      <td>{{ rowData["userId"] ?? " - " }}</td>
-      <td>{{ rowData["empName"] ?? " - " }}</td>
+      <td *ngFor="let heading of getTableHeadings(countries?? []);trackBy:trackByID">{{rowData[heading]}}</td>
+      <!-- <td>{{ rowData["empName"] ?? " - " }}</td>
       <td>{{ rowData["userName"] ?? " - " }}</td>
       <td>{{ rowData["role"] ?? " - " }}</td>
       <td>
@@ -89,307 +87,28 @@
         >
           {{ rowData["status"] === 1 ? "Active" : "Inactive" }}
         </span>
-      </td>
-      <td>
-        <button
-          title="Change Password"
-          pButton
-          icon="pi pi-key"
-          class="p-button-rounded p-button-text"
-          (click)="changePassword(rowData, 'changePassword')"
-          pTooltip="Change Password"
-          tooltipPosition="top"
-        ></button>
-
-        <button
-          title="Reset Password"
-          pButton
-          icon="pi pi-undo"
-          class="p-button-rounded p-button-text"
-          (click)="changePassword(rowData, 'resetPassword')"
-          pTooltip="Reset Password"
-          tooltipPosition="top"
-        ></button>
+      </td> -->
+      <td> 
+     
 
         <button
           pButton
           icon="pi pi-pencil"
           class="p-button-rounded p-button-text"
-          (click)="editUser(rowData)"
           pTooltip="Edit User"
           tooltipPosition="top"
-        ></button>
+          ></button>
+        <!-- (click)="editUser(rowData)" -->
 
         <button
-          pButton
-          icon="pi pi-trash"
-          (click)="deleteUser(rowData)"
-          class="p-button-rounded p-button-text p-button-danger"
-          pTooltip="Delete User"
-          tooltipPosition="top"
+        pButton
+        icon="pi pi-trash"
+        class="p-button-rounded p-button-text p-button-danger"
+        pTooltip="Delete User"
+        tooltipPosition="top"
         ></button>
+        <!-- (click)="deleteUser(rowData)" -->
       </td>
     </tr>
   </ng-template>
 </p-table>
-
-<p-dialog
-  [visible]="displayDialog()"
-  styleClass="w-full md:w-[40rem]"
-  [closable]="false"
-  [maximizable]="true"
-  (onHide)="dialogClose()"
->
-  <ng-template #header>
-    <div class="flex items-center justify-between w-full">
-      <h3 class="font-semibold text-lg">
-        @if(formState() == 'addUser'){ Register User } @else if(formState() ==
-        'changePassword'){ Change Password }@else { Reset Password }
-      </h3>
-      <button
-        pButton
-        icon="pi pi-times"
-        (click)="displayDialog.set(false)"
-        class="p-button-rounded p-button-text"
-      ></button>
-    </div>
-  </ng-template>
-
-  @if(formState() === 'addUser'){
-  <form [formGroup]="userForm" (ngSubmit)="submitForm()">
-    <div class="p-fluid grid gap-3">
-      <!-- Employee ID -->
-      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
-        <label for="empId" class="w-full md:w-1/3 font-medium">Employee</label>
-        <div class="w-full md:w-2/3">
-          @if(employees$ | async; as employees){
-          <p-select
-            filter="true"
-            [options]="employees"
-            optionLabel="firstName"
-            optionValue="empId"
-            formControlName="empId"
-            placeholder="Select Employee"
-            class="w-full"
-          >
-          </p-select>
-
-          <p-message
-            *ngIf="
-              userForm.get('empId')?.invalid &&
-              (userForm.get('empId')?.dirty || userForm.get('empId')?.touched)
-            "
-            severity="error"
-            text="Employee is required."
-          ></p-message>
-
-          }
-        </div>
-      </div>
-
-      <!-- Role ID -->
-      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
-        <label for="empId" class="w-full md:w-1/3 font-medium">Role</label>
-        <div class="w-full md:w-2/3">
-          @if(roles$ | async; as roles){
-          <p-select
-            filter="true"
-            [options]="roles"
-            optionLabel="name"
-            optionValue="id"
-            formControlName="roleId"
-            placeholder="Select Role"
-            class="w-full"
-          >
-          </p-select>
-
-          <p-message
-            *ngIf="
-              userForm.get('roleId')?.invalid &&
-              (userForm.get('roleId')?.dirty || userForm.get('roleId')?.touched)
-            "
-            severity="error"
-            text="Role is required."
-          ></p-message>
-
-          }
-        </div>
-      </div>
-
-      <!-- Username -->
-      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
-        <label for="userName" class="w-full md:w-1/3 font-medium"
-          >Username</label
-        >
-        <div class="w-full md:w-2/3">
-          <input
-            pInputText
-            formControlName="userName"
-            id="userName"
-            placeholder="Username"
-            class="w-full"
-          />
-          <p-message
-            class="mt-2"
-            *ngIf="
-              userForm.get('userName')?.invalid &&
-              (userForm.get('userName')?.dirty ||
-                userForm.get('userName')?.touched)
-            "
-            severity="error"
-            text="Username is required."
-          ></p-message>
-        </div>
-      </div>
-
-      <!-- Password -->
-      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
-        <label for="password" class="w-full md:w-1/3 font-medium"
-          >Password</label
-        >
-        <div class="w-full md:w-2/3">
-          <input
-            pInputText
-            formControlName="password"
-            id="password"
-            placeholder="Password"
-            type="password"
-            class="w-full"
-          />
-          <p-message
-            class="mt-2"
-            *ngIf="
-              userForm.get('password')?.invalid &&
-              (userForm.get('password')?.dirty ||
-                userForm.get('password')?.touched)
-            "
-            severity="error"
-            text="Password is required."
-          ></p-message>
-        </div>
-      </div>
-
-      <!-- Status -->
-      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
-        <label for="status" class="w-full md:w-1/3 font-medium">Status</label>
-        <div class="w-full md:w-2/3">
-          <p-checkbox formControlName="status" [binary]="true"></p-checkbox>
-        </div>
-      </div>
-    </div>
-
-    <!-- Buttons -->
-    <div class="flex justify-end mt-4">
-      <button
-        pButton
-        label="Save"
-        type="submit"
-        class="p-button p-button-primary"
-      ></button>
-    </div>
-  </form>
-  }@else if (formState() === 'changePassword') {
-  <form [formGroup]="chPwd" (ngSubmit)="changePasswordFormSubmission()">
-    <!-- Current Password -->
-    <div class="col-12 flex flex-col md:flex-row items-center gap-2">
-      <label for="currentPwd" class="w-full md:w-1/3 font-medium"
-        >Current Password</label
-      >
-      <div class="w-full md:w-2/3">
-        <p-password
-          formControlName="currentPwd"
-          id="currentPwd"
-          placeholder="Current Password"
-          class="w-full"
-          type="password"
-          [toggleMask]="true"
-        />
-        <p-message
-          class="mt-2"
-          *ngIf="
-            userForm.get('currentPwd')?.invalid &&
-            (userForm.get('currentPwd')?.dirty ||
-              userForm.get('currentPwd')?.touched)
-          "
-          severity="error"
-          text="Current password is required."
-        ></p-message>
-      </div>
-    </div>
-
-    <!-- Description -->
-    <div class="col-12 flex flex-col md:flex-row items-center gap-2 mt-5">
-      <label for="newPwd" class="w-full md:w-1/3 font-medium"
-        >New Password</label
-      >
-      <div class="w-full md:w-2/3">
-        <p-password
-          formControlName="newPwd"
-          id="newPwd"
-          placeholder="New Password"
-          class="w-full"
-          type="password"
-          [toggleMask]="true"
-        />
-        <p-message
-          class="mt-2"
-          *ngIf="
-            userForm.get('newPwd')?.invalid &&
-            (userForm.get('newPwd')?.dirty || userForm.get('newPwd')?.touched)
-          "
-          severity="error"
-          text="New password is required."
-        ></p-message>
-      </div>
-    </div>
-
-    <!-- Buttons -->
-    <div class="flex justify-end mt-4">
-      <button
-        pButton
-        label="Save"
-        type="submit"
-        class="p-button p-button-primary"
-      ></button>
-    </div>
-  </form>
-  }@else {
-  <form [formGroup]="chPwd" (ngSubmit)="resetPassword()">
-    <!-- New  Password -->
-    <div class="col-12 flex flex-col md:flex-row items-center gap-2">
-      <label for="newPwd" class="w-full md:w-1/3 font-medium"
-        >New Password</label
-      >
-      <div class="w-full md:w-2/3">
-        <p-password
-          formControlName="newPwd"
-          id="newPwd"
-          placeholder="New Password"
-          class="w-full"
-          type="password"
-          [toggleMask]="true"
-        />
-        <p-message
-          class="mt-2"
-          *ngIf="
-            userForm.get('newPwd')?.invalid &&
-            (userForm.get('newPwd')?.dirty || userForm.get('newPwd')?.touched)
-          "
-          severity="error"
-          text="New password is required."
-        ></p-message>
-      </div>
-    </div>
-
-    <!-- Buttons -->
-    <div class="flex justify-end mt-4">
-      <button
-        pButton
-        label="Save"
-        type="submit"
-        class="p-button p-button-primary"
-      ></button>
-    </div>
-  </form>
-  }
-</p-dialog>
