--- a/src/app/core/components/region-management/region-management.component.html
+++ b/src/app/core/components/region-management/region-management.component.html
@@ -8,7 +8,7 @@
 
 <!-- <p-breadcrumb class="max-w-full" [model]="" /> -->
 <!-- @let users = users$ | async; -->
- @let countries=countries$ | async;
+@let countries=countries$ | async;
 <p-table
   [scrollable]="true"
   scrollHeight="flex"
@@ -28,23 +28,19 @@
   [globalFilterFields]="['name']"
   stateStorage="session"
   stateKey="statedemo-session"
-  >
+>
   <!-- [loading]="isLoading()" -->
   <ng-template #caption>
     <div class="flex flex-wrap gap-2">
-      <p-button
-        label="Clear"
-        [outlined]="true"
-        icon="pi pi-filter-slash"
-        />
-        <!-- (click)="clear(dt)" -->
+      <p-button label="Clear" [outlined]="true" icon="pi pi-filter-slash" />
+      <!-- (click)="clear(dt)" -->
       <p-button
         p-button
         icon="pi pi-plus"
-        label="Add User"
+        label="Add {{ this.dataType }}"
         styleClass="ml-2"
-        />
-        <!-- (click)="formState.set('addUser'); displayDialog.set(true)" -->
+        (click)="formState.set('addItem'); displayDialogBox.set(true)"
+      />
       <p-iconfield iconPosition="left" class="ml-auto">
         <p-inputicon>
           <i class="pi pi-search"></i>
@@ -61,9 +57,10 @@
   </ng-template>
   <ng-template pTemplate="header" let-columns>
     <tr>
-      <th *ngFor="let country of tableHeadings$|async">{{country|titlecase}}</th>
+      <th *ngFor="let country of tableHeadings$ | async">
+        {{ country | titlecase }}
+      </th>
       <th>Actions</th>
-     
     </tr>
   </ng-template>
   <ng-template
@@ -73,42 +70,157 @@
     let-rowIndex="rowIndex"
   >
     <tr [pSelectableRow]="rowData">
-      <td *ngFor="let heading of getTableHeadings(countries?? []);trackBy:trackByID">{{rowData[heading]}}</td>
-      <!-- <td>{{ rowData["empName"] ?? " - " }}</td>
-      <td>{{ rowData["userName"] ?? " - " }}</td>
-      <td>{{ rowData["role"] ?? " - " }}</td>
+      <td
+        *ngFor="
+          let heading of getTableHeadings(countries ?? []);
+          trackBy: trackByID
+        "
+        class="text-center text-justify"
+      >
+        <ng-container *ngIf="heading === 'status'; else defaultCell">
+          <p-tag
+            [severity]="rowData[heading] === 1 ? 'success' : 'danger'"
+            [value]="getTagValue(rowData[heading])"
+            [rounded]="true"
+          />
+        </ng-container>
+        <ng-template #defaultCell>
+          {{ rowData[heading] ?? "-" }}
+        </ng-template>
+      </td>
       <td>
-        <span
-          [ngClass]="{
-            'bg-green-100 text-green-800': rowData['status'] === 1,
-            'bg-red-100 text-red-800': rowData['status'] === 0
-          }"
-          class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold"
-        >
-          {{ rowData["status"] === 1 ? "Active" : "Inactive" }}
-        </span>
-      </td> -->
-      <td> 
-     
-
         <button
           pButton
           icon="pi pi-pencil"
           class="p-button-rounded p-button-text"
           pTooltip="Edit User"
           tooltipPosition="top"
-          ></button>
-        <!-- (click)="editUser(rowData)" -->
+          (click)="editItem(rowData)"
+        ></button>
 
         <button
-        pButton
-        icon="pi pi-trash"
-        class="p-button-rounded p-button-text p-button-danger"
-        pTooltip="Delete User"
-        tooltipPosition="top"
+          pButton
+          icon="pi pi-trash"
+          class="p-button-rounded p-button-text p-button-danger"
+          pTooltip="Delete User"
+          tooltipPosition="top"
         ></button>
         <!-- (click)="deleteUser(rowData)" -->
       </td>
     </tr>
   </ng-template>
 </p-table>
+
+<p-dialog
+  [visible]="displayDialogBox()"
+  styleClass="w-full md:w-[40rem]"
+  [closable]="false"
+  [maximizable]="true"
+>
+  <!-- (onHide)="dialogClose()" -->
+  <ng-template #header>
+    <div class="flex items-center justify-between w-full">
+      <h3 class="font-semibold text-lg">
+        @if(formState() == 'addItem'){ Add {{ this.dataType }} } @if(formState()
+        == 'editItem'){ Edit {{ this.dataType }} }
+      </h3>
+      <button
+        pButton
+        icon="pi pi-times"
+        (click)="displayDialogBox.set(false)"
+        class="p-button-rounded p-button-text"
+      ></button>
+    </div>
+  </ng-template>
+
+  <!-- To add the building ############## -->
+  <ng-container *ngIf="dataType === 'Country'">
+    <div
+      class="grid grid-cols-1 md:grid-cols-[120px_1fr] gap-4 mb-4 items-center"
+    >
+      <label for="name" class="font-medium flex"
+        >Country Name
+
+        <span class="text-red-400 font-bold">*</span>
+      </label>
+      <input
+        pInputText
+        id="name"
+        placeholder="Country Name"
+        required
+        [(ngModel)]="newCountry.name"
+        class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
+      />
+    </div>
+    <div
+      class="grid grid-cols-1 md:grid-cols-[120px_1fr] gap-4 mb-4 items-center"
+    >
+      <label for="name" class="font-medium flex"
+        >Code
+
+        <span class="text-red-400 font-bold">*</span>
+      </label>
+      <input
+        pInputText
+        id="name"
+        placeholder="Code"
+        required
+        [(ngModel)]="newCountry.code"
+        class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
+      />
+    </div>
+    <div
+      class="grid grid-cols-1 md:grid-cols-[120px_1fr] gap-4 mb-4 items-center"
+    >
+      <label for="name" class="font-medium flex"
+        >Phone Code
+
+        <span class="text-red-400 font-bold">*</span>
+      </label>
+      <input
+        pInputText
+        id="pCode"
+        placeholder="Phone Code"
+        required
+        [(ngModel)]="newCountry.phoneCode"
+        class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
+      />
+    </div>
+    <div
+      class="grid grid-cols-1 md:grid-cols-[120px_1fr] gap-4 mb-4 items-center"
+    >
+      <label for="name" class="font-medium"
+        >Currency Code
+
+        <span class="text-red-400 font-bold">*</span>
+      </label>
+      <input
+        pInputText
+        id="pCode"
+        placeholder="Currency Code"
+        required
+        [(ngModel)]="newCountry.currencyCode"
+
+        class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
+      />
+    </div>
+
+    <!-- <div
+      class="grid grid-cols-1 md:grid-cols-[120px_1fr] gap-4 mb-4 items-start"
+    >
+      <label for="description" class="font-medium"
+        >Status
+        <span class="text-red-400 font-bold">*</span>
+      </label>
+      <p-checkbox [binary]="true" />
+    </div> -->
+  </ng-container>
+     <div class="flex justify-end mt-4">
+      <button
+        pButton
+        label="Save"
+        (click)="addOrUpdateItem()"
+        class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded"
+      ></button>
+    </div>
+</p-dialog>
