--- a/src/app/core/components/region-management/region-management.component.html
+++ b/src/app/core/components/region-management/region-management.component.html
@@ -93,7 +93,7 @@
           pButton
           icon="pi pi-pencil"
           class="p-button-rounded p-button-text"
-          pTooltip="Edit User"
+          pTooltip="Edit Item"
           tooltipPosition="top"
           (click)="editItem(rowData)"
         ></button>
@@ -102,10 +102,10 @@
           pButton
           icon="pi pi-trash"
           class="p-button-rounded p-button-text p-button-danger"
-          pTooltip="Delete User"
+          pTooltip="Delete Item"
           tooltipPosition="top"
+          (click)="deleteItemConfirmation(rowData)" 
         ></button>
-        <!-- (click)="deleteUser(rowData)" -->
       </td>
     </tr>
   </ng-template>
@@ -218,7 +218,7 @@
      <div class="flex justify-end mt-4">
       <button
         pButton
-        label="Save"
+        label="{{formState()==='editItem'?'Update':'Save'}}"
         (click)="addOrUpdateItem()"
         class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded"
       ></button>
