--- a/src/app/core/components/roaster/roaster.component.html
+++ b/src/app/core/components/roaster/roaster.component.html
@@ -96,6 +96,7 @@
           class="p-button-rounded p-button-text p-button-sm"
           pTooltip="Assign Staff"
           tooltipPosition="top"
+          (click)="assignStaff(rowData)"
         ></button>
 
         <!-- View Duties -->
